--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation "org.mindrot:jbcrypt:0.4"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation "org.springframework.boot:spring-boot-starter-security"
     runtimeOnly 'com.mysql:mysql-connector-j:'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
