--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.hbm2ddl.auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/bankapp
 spring.datasource.username=bankapp
-spring.datasource.password=thepasswordshouldntbepassword
+spring.datasource.password=bankapp
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 #spring.jpa.show-sql: true
