--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,9 @@ dependencies {
     implementation "org.mindrot:jbcrypt:0.4"
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.security:spring-security-test"
     runtimeOnly 'com.mysql:mysql-connector-j:'
+    runtimeOnly 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 }
 
