--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -6,3 +6,4 @@ message.badCredentials=Invalid username or password
 message.sessionExpired=Session timed out
 message.logoutError=Sorry, error login out
 message.logoutSucc=You logged out successfully
+AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or password
